moving padding from body to page-wrapper to fix the page rendering on mobile

--- a/v3/styles/phone-default.css
+++ b/v3/styles/phone-default.css
@@ -97,17 +97,28 @@ body {
     max-width: 1200px; /* in viewports above 1200px, the body remains at 1200px and centers itself in the available space */
 	background-color: var(--black-color);
     color: var(--white-color);
-    padding: 2rem;
 }
 
 *, *::before, *::after {
 	box-sizing: inherit;
 }
 
+/* PAGE WRAPPER STYLES */
+.page-wrapper {
+    display: grid;
+    border: 3px solid orange;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 2rem;
+    row-gap: 2rem;
+    padding: 2% 6% 2% 6%;
+}
+/* END PAGE WRAPPER STYLES */
+
 /* NAV STYLES */
 .nav-wrapper {
     display: flex;
-    margin-bottom: 2rem;
+    border: 2px dashed orange;
     align-items: center;
     justify-content: space-between;
 }
@@ -148,10 +159,14 @@ body {
 /* MENU STYLES */
 /* INSERT TOGGLER ICON */
 .menu-wrapper .toggler-icon > div::after {
-    background-image: url('../images/keyboard-piano.svg');
-    width: 100px;
+    content: url('../images/keyboard-piano.svg');
 }
 /* END MENY STYLES */
+
+/* HERO BOX STYLES */
+.hero-box {
+    border: 2px dashed orange;
+}
 
 /* HERO IMAGE STYLES */
 #hero-image {
@@ -180,3 +195,10 @@ body {
 	margin-top: .5rem;
 }
 /* END HERO TEXT STYLES */
+/* END HERO BOX STYLES */
+
+/* MAIN STYLES */
+main {
+    border: 2px dashed orange;
+}
+/* END MAIN STYLES */
